# pqc-std

./: Cargo.toml  README.md
src/: kem.rs  lib.rs  sig.rs  utils.rs
src/apps/: chat.rs  email.rs  firmware.rs  mod.rs
src/tests/: chat.ors
